<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joandeson.ufpbalerta.sobre"
    android:background="@color/totalbranco">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/totalbranco"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1_sobre"
                android:textColor="@color/totalpreto"
                android:layout_marginTop="10dp"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2_sobre"
                android:textColor="@color/totalpreto"
                android:layout_marginTop="10dp"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a3_sobre"
                android:textColor="@color/totalpreto"
                android:layout_marginTop="10dp"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4_sobre"
                android:textColor="@color/totalpreto"
                android:layout_marginTop="10dp"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chamar"
                android:textColor="@color/totalcinza"
                android:layout_marginTop="20dp"
                android:textSize="25dp"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Instagram"
                android:textColor="@color/totalbranco"
                android:background="@color/instagram"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_instagram"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/chamar"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
